--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,28 @@ services:
       timeout: 5s
       retries: 5
 
+  testdb:
+    image: postgres:14
+    container_name: "database"
+    expose:
+      - "5432"
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=xmtest
+      - POSTGRES_PASSWORD=hello
+    networks:
+      - assessment
+    volumes:
+      - test_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   db_data:
+  test_data:
 
 networks:
   assessment:
