--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: "3.8"
 services:
   db:
     image: postgres:14
-    container_name: "database"
     ports:
       - "5432:5432"
     environment:
@@ -13,7 +12,7 @@ services:
     networks:
       - assessment
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - dbdata:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
@@ -22,9 +21,8 @@ services:
 
   testdb:
     image: postgres:14
-    container_name: "database"
-    expose:
-      - "5432"
+    ports:
+      - "5433:5432"
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=xmtest
@@ -32,7 +30,7 @@ services:
     networks:
       - assessment
     volumes:
-      - test_data:/var/lib/postgresql/data
+      - testdata:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
@@ -40,8 +38,8 @@ services:
       retries: 5
 
 volumes:
-  db_data:
-  test_data:
+  dbdata:
+  testdata:
 
 networks:
   assessment:
