--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -22,7 +22,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -coverprofile=./coverage.out -covermode=count  ./...
+      run: go test -coverprofile=./coverage.out -covermode=count ./internal/company/...
     - name: Upload coverage
       uses: codecov/codecov-action@v2
       with:
