--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -13,6 +13,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Docker Compose Action
+      uses: isbang/compose-action@v1.2.0
+      with:
+        compose-file: "./docker-compose.yml"
+        down-flags: "--volumes"
+        services: |
+          testdb
+
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
@@ -22,7 +30,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -coverprofile=./coverage.out -covermode=count ./internal/company/...
+      run: go test -coverprofile=./coverage.out -covermode=count ./...
     - name: Upload coverage
       uses: codecov/codecov-action@v2
       with:
