--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,26 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  api:
+    build: .
+    container_name: "company-rest-api"
+    environment:
+      DB_USERNAME: "postgres"
+      DB_PASSWORD: "hello"
+      DB_DB: "postgres"
+      DB_HOST: "db"
+      DB_TABLE: "postgres"
+      DB_PORT: 5432
+      SSL_MODE: "disable"
+    ports:
+      - 8080:8080
+    volumes:
+      - ./migrations:/app/migrations
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - assessment
 
 volumes:
   dbdata:
